--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,4 +1,7 @@
 
+.App{
+  text-align: start;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -32,63 +35,4 @@
   to {
     transform: rotate(360deg);
   }
-}
-#title{
-  text-align: center;
-  margin: 20px;
-  font-family: "Raleway", sans-serif;
-  font-weight: 300;
-  font-size: 40px;
-  color: #080808;
-
-}
-ul {
-  counter-reset: li; /* Initialise le compteur */
-        list-style: none; /* Supprime la numérotation par défaut */
-        list-style: decimal; /* Restitue la numérotation par défaut pour IE6/7 */
-        font: 15px 'trebuchet MS', 'lucida sans';
-        padding: 0;
-        margin-bottom: 4em;
-        text-shadow: 0 1px 0 rgba(255,255,255,.5);
-}
-
-
-.rounded-list li{
-  position: relative;
-  display: block;
-  padding: .4em .4em .4em 2em;
-  padding: .4em;
-  margin: .5em 0;
-  background: #ddd;
-  color: #444;
-  text-decoration: none;
-  border-radius: .3em;
-  transition: all .3s ease-out;
-}
-
-.rounded-list li:hover{
-  background: #eee;
-}
-
-.rounded-list li:hover:before{
-transform: rotate(360deg);
-}
-
-.rounded-list li:before{
-  content: counter(li);
-  counter-increment: li;
-  position: absolute;
-  
-  top: 50%;
-  margin-top: -1.3em;
-  background: #87ceeb;
-  height: 2em;
-  left: -1em;
-  width: 2em;
-  line-height: 2em;
-  border: .3em solid #fff;
-  text-align: center;
-  font-weight: bold;
-  border-radius: 2em;
-  transition: all .3s ease-out;
 }
